Fix 404/500 page responsiveness & dark mode

--- a/styles/components/blocks/Error.module.scss
+++ b/styles/components/blocks/Error.module.scss
@@ -12,3 +12,7 @@
 .error__text {
 	@apply font-mono font-normal text-xs text-center sm:text-left;
 }
+
+:global(.dark) .error__wrapper {
+	@apply bg-white;
+}
